2010-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add check for Windows spawnvp function.

	* magick/semaphore.c (DestroySemaphore): POSIX mutex statically
	initialized via PTHREAD_MUTEX_INITIALIZER should not be destroyed.

	* configure.ac: DisableSlowOpenMP is now the default.  Use
	--enable-openmp-slow to enable OpenMP for algorithms which
	sometimes run slower rather than faster.

2010-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Added MagickLibInterfaceNewest and
	MagickLibInterfaceOldest preprocessor defines so that applications
	may easily test for library versions while compiling.

2010-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Use restrict keyword.

	* magick/pixel_iterator.c: Use restrict keyword.

	* utilities/Makefile.am: Modules are supported in the shared
	library built so list-module.sh test should be expected to pass.

	* configure.ac: Add WITH_SHARED_LIBS conditional.

2010-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Update copyright years.

	* magick/semaphore.c: The return code from all pthread mutex APIs
	are now checked (not just initialize and destroy), and any error
	results in an immediate fatal exit.

---------------------------------------------------------------------------
Copyright (C) 2010 GraphicsMagick Group

This program is covered by multiple licenses, which are described in
Copyright.txt. You should have received a copy of Copyright.txt with this
package; otherwise see http://www.graphicsmagick.org/www/Copyright.html.
