@@ -1,6 +1,5 @@
 /*
-% Copyright (C) 2003, 2005 GraphicsMagick Group
-% Copyright (C) 2000-2002, Ghostgum Software Pty Ltd.  All rights reserved.
+% Copyright (C) 2003 - 2010 GraphicsMagick Group
 % Copyright (C) 2002 ImageMagick Studio
 %
 % This program is covered by multiple licenses, which are described in
