@@ -1,5 +1,5 @@
 /*
-% Copyright (C) 2003 - 2009 GraphicsMagick Group
+% Copyright (C) 2003 - 2010 GraphicsMagick Group
 % Copyright (c) 2000 Markus Friedl.  All rights reserved.
 % Copyright (C) 2002 ImageMagick Studio
 % Copyright 1991-1999 E. I. du Pont de Nemours and Company
@@ -53,6 +53,10 @@
 #if defined(HAVE_MACH_O_DYLD_H)
 /* Needed for _NSGetExecutablePath */
 # include <mach-o/dyld.h>
+#endif
+
+#if defined(HAVE_SPAWNVP) && defined(HAVE_PROCESS_H)
+#  include <process.h>
 #endif
 
 /*
@@ -3613,6 +3617,161 @@ MagickExport magick_int64_t MagickSizeStrToInt64(const char *str,
     }
 
   return result;
+}
+
+/*
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%   M a g i c k S p a w n V P                                                 %
+%                                                                             %
+%                                                                             %
+%                                                                             %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%  MagickSpawnVP() executes an external command with arguments provided by
+%  an argument vector.  The return status of the executed command is returned
+%  if it is executed, or -1 is returned if the command could not be executed.
+%  Executed commands will normally return zero if they execute without error.
+%
+%  The format of the MagickSpawnVP method is:
+%
+%      int MagickSpawnVP(const char *file, char *const argv[])
+%
+%  A description of each parameter follows:
+%
+%    o file:  Name of the command to execute.
+%
+%    o argv:  Argument vector. First argument in the vector should be
+%             the name of the command.  The argument vector is terminated
+%             via a NULL pointer.
+%
+*/
+MagickExport int
+MagickSpawnVP(const unsigned int verbose,const char *file, char *const argv[])
+{
+  int
+    status;
+
+  char
+    message[MaxTextExtent];
+
+
+  status = -1;
+  message[0]='\0';
+  errno=0;
+
+  {
+    /*
+      Verify that we are allowed to run this program.
+    */
+    ExceptionInfo
+      exception_info;
+    
+    GetExceptionInfo(&exception_info);
+    if (MagickConfirmAccess(FileExecuteConfirmAccessMode,argv[0],&exception_info)
+	== MagickFail)
+      {
+	errno=EPERM;
+	DestroyExceptionInfo(&exception_info);
+	return -1;
+      }
+  }
+
+#if defined(HAVE_SPAWNVP)
+  {
+    /* int spawnvp(int mode, const char *path, const char * const *argv); */
+    status = spawnvp(_P_WAIT, file, (const char * const *) argv);
+  }
+#else
+  {
+    pid_t
+      child_pid;
+
+    child_pid = fork( );
+    if ( (pid_t)-1 == child_pid)
+      {
+	/* Failed to fork, errno contains reason */
+	status = -1;
+	FormatString(message,"fork failed: %.1024s", strerror(errno));
+      }
+    else if ( 0 == child_pid )
+      {
+	/* We are the child process, exec program with arguments. */
+	status = execvp(file, argv);
+
+	/* If we get here, then execvp must have failed. */
+	(void) fprintf(stderr, "execvp failed, errno = %d (%s)\n",errno,strerror(errno));
+
+	/* If there is an execvp error, then call _exit() */
+	_exit(1);
+      }
+    else
+      {
+	/* We are the parent process, wait for child. */
+	pid_t waitpid_status;
+	int child_status = 0;
+	waitpid_status = waitpid(child_pid, &child_status, 0);
+	if ( (pid_t)-1 == waitpid_status )
+	  {
+	    /* Waitpid error */
+	    status = -1;
+	    FormatString(message, "waitpid failed: %.1024s", strerror(errno));
+	  }
+	else if ( waitpid_status == child_pid )
+	  {
+	    /* Status is available for child process */
+	    if ( WIFEXITED( child_status ) )
+	      {
+		status =  WEXITSTATUS( child_status );
+	      }
+	    else if ( WIFSIGNALED( child_status ) )
+	      {
+		int sig_num = WTERMSIG( child_status );
+		status = -1;
+		FormatString(message, "child process quit due to signal %d", sig_num);
+	      }
+	  }
+      }
+  }
+#endif
+
+  /*
+    Provide a verbose/dignostic message in a form which is easy for
+    the user to understand.
+  */
+  if (verbose || (status != 0))
+    {
+      const char
+	*message_p = (const char *) NULL;
+
+      char
+	*command;
+
+      unsigned int
+	i;
+
+      command = AllocateString((const char*) NULL);
+      for (i = 0; argv[i] != (const char*) NULL; i++)
+	{
+	  char
+	    buffer[MaxTextExtent];
+
+	  FormatString(buffer,"\"%.1024s\"", argv[i]);
+
+	  if (0 != i)
+	    (void) ConcatenateString(&command," ");
+
+	  (void) ConcatenateString(&command,buffer);
+	}
+      if (message[0] != '\0')
+	message_p = message;
+      MagickError2(DelegateError,command,message_p);
+      MagickFreeMemory(command);
+    }
+
+  return status;
 }
 
 /*
